[package]
name = "pwchecker-rs"
version = "0.1.0"
authors = ["Mason Johnson <mason@invariant.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.1", features = ["blocking"] }
rust-crypto = "0.2.36"